# python-package

./: .gitignore  README.md  run_python_package.py
ks-package/: README.md  pyproject.toml
ks-package-c/: README.md  pyproject.toml  setup.py
ks-package-c/src/: main.c
ks-package-cpp/: README.md  pyproject.toml  setup.py
ks-package-cpp/src/: main.cpp
ks-package-rust/: Cargo.toml  setup.py
ks-package-rust/ks_package_rust/: __init__.py  ks_package_rust.pyi
ks-package-rust/src/: lib.rs
ks-package/ks_package/: __init__.py  main.py
ks-package/tests/: test_main.py
