[tool.poetry]
name = "ks-package"
version = "0.1.0"
description = "This is simple python package"
authors = ["Kumar Shanu"]
readme = "README.md"
packages = [{include = "ks_package"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
